--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/file-input": "^2.0.0",
     "@angular/animations": "~9.0.6",
     "@angular/cdk": "~9.1.2",
     "@angular/common": "~9.0.6",
@@ -23,6 +24,7 @@
     "@angular/pwa": "^0.900.6",
     "@angular/router": "~9.0.6",
     "@angular/service-worker": "~9.0.6",
+    "file-saver": "^2.0.2",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.11.1",
@@ -33,9 +35,10 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
-    "@types/node": "~13.9.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.5.9",
     "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~13.9.1",
     "codelyzer": "^5.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
